public class AbstractProductA
{
}
