public class AbstractProductB
{
}
