public class ProductA1 extends AbstractProductA
{
}
