public class ProductA2 extends AbstractProductA
{
}
