public class ProductB1 extends AbstractProductB
{
}
