public class ProductB2 extends AbstractProductB
{
}
