@startuml

title Abstract Factory

class AbstractFactory {
    + createProductA(): AbstractProductA()
    + createProductB(): AbstractProductB()
}
class Client
class ConcreteFactory1 {
    + createProductA(): AbstractProductA
    + createProductB(): AbstractProductB
}
class ConcreteFactory2 {
    + createProductA(): AbstractProductA
    + createProductB(): AbstractProductB
}
class AbstractProductA
class AbstractProductB
class ProductA1
class ProductA2
class ProductB1
class ProductB2

AbstractFactory <-- Client
AbstractFactory <|-- ConcreteFactory1
AbstractFactory <|-- ConcreteFactory2
Client --> AbstractProductA
Client --> AbstractProductB
AbstractProductA <|-- ProductA1
AbstractProductA <|-- ProductA2
AbstractProductB <|-- ProductB1
AbstractProductB <|-- ProductB2
ProductA1 <-- ConcreteFactory1
ProductB1 <-- ConcreteFactory1
ProductA2 <-- ConcreteFactory2
ProductB2 <-- ConcreteFactory2

@enduml